--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,9 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="main-footer" class="main-footer">
     <div class="pull-right hidden-xs">
-        <b>Version</b> 2.4.0
+        <b>Version</b> 1.0
     </div>
-    <strong>Copyright &copy; 2014-2016 <a href="https://adminlte.io">Almsaeed Studio</a>.</strong> All rights
+    <strong>Copyright &copy; 2017-[[${#dates.format(new java.util.Date().getTime(), 'yyyy')}]] <a href="https://adminlte.io">LiveSpider</a>.</strong> All rights
     reserved.
 </footer>
 </html>
